--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@
     margin-left: 130px;
     margin-right: 130px;
     text-align: center;
+    margin-bottom: 100px;
 }
 body{
     background-image: url('pexels-valdemaras-d-1647962.jpg');
